Also reset percent mode when clearing state

BUG: 376655
FIXED-IN: 16.12.3

Differential Revision: https://phabricator.kde.org/D4698